# dh-exec

./: .gitignore  .gitmodules  .travis.yml  HACKING.md  Makefile.am  README.md  TODO  configure.ac
debian/: changelog  control  copyright  rules  source.lintian-overrides  watch
doc/: Makefile.am  dh-exec-install.1  dh-exec-subst.1  dh-exec.1  dh_subst.1
lib/: Makefile.am  dh-exec-filter-arch  dh-exec-filter-build-profiles  dh-exec-illiterate-tangle  dh-exec-install-magic  dh-exec-install-rename  dh-exec-strip-arch-filter  dh-exec-subst-env  dh-exec-subst-multiarch
src/: Makefile.am  dh-exec-filter.1  dh-exec-illiterate.1  dh-exec-illiterate.c  dh-exec-install.1  dh-exec-install.c  dh-exec-subst.1  dh-exec-subst.c  dh-exec.1  dh-exec.c  dh-exec.h  dh-exec.lib.c  dh-exec.lib.h  dh_subst.c
t/: Makefile.am  lib_unit_tests.c  test.lib.bash  test.lib.sh  test_combined  test_combined.bats  test_dh  test_dh.bats  test_dh_exec.bats  test_env  test_filter.bats  test_help  test_help.bats  test_illiterate  test_install_copy  test_install_copy.bats  test_install_move.bats  test_install_syntax  test_install_syntax.bats  test_main  test_multiarch  test_strip  test_strip.bats  test_subst_env  test_subst_multiarch  test_subst_syntax  test_syntax  test_unit.bats
t/pkg-test/debian/: control  copyright  pkg-test.install
